<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Nitrogen OS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App Title -->
    <string name="lessaosp_settings_title">Mantle</string>

    <!-- Categories -->
    <string name="button_title">Buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="powermenu_title">Power menu</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents apps</string>
    <string name="statusbar_title">Status bar</string>
    <string name="volume_title">Volume rockers</string>
    <string name="notifications_title">Notifications</string>
    <string name="device_part_title">Device features</string>

    <!-- General strings -->
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="default_string">Default</string>   

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>

    <!-- Double Tap Lockscreen to Sleep -->
    <string name="double_tap_to_sleep_lockscreen_title">Lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the lock screen to put the device to sleep</string>

    <!-- Double tap-to-sleep -->
    <string name="double_tap_to_sleep_title">Status bar</string>
    <string name="double_tap_to_sleep_summary">Double-tap status bar to put the device to sleep</string>

    <!-- Three-fingers-swipe to screenshot -->
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe three fingers to take screenshot</string>

    <!-- Alarm blocker -->
    <string name="alarm_blocker">Alarm blocker</string>
    <string name="alarm_blocker_title">Enable</string> 
    <string name="alarm_blocker_summary">Block alarms while screen off</string>
    <string name="alarm_blocker_save">Save</string>
    <string name="alarm_list_header">Available alarms</string>
    <string name="alarm_blocker_reload">Reload</string>
    <string name="alarm_blocker_warning_title">Proceed with caution</string>
    <string name="alarm_blocker_warning">Blocking alarms have the potential to cause instability, crashes or data loss.</string>

    <!-- Wakelock blocker -->
    <string name="wakelock_blocker_title">Wakelock blocker</string>
    <string name="wakelock_blocker_summary">Block system wakelocks</string>
    <string name="wakelock_blocker_save">Save</string>
    <string name="wakelock_list_header">Available wakelocks</string>
    <string name="wakelock_blocker_reload">Reload</string>
    <string name="wakelock_blocker_warning_title">Proceed with caution</string>
    <string name="wakelock_blocker_warning">Blocking wakelocks have the potential to cause instability, crashes or data loss</string>
        
    <!-- Brightness slider styles -->
    <string name="slider_styles_title">Brightness slider style</string>
    <string name="slider_rui">RUI</string>     

    <!-- QS rows and columns -->
    <string name="qs_column_rows_settings_title">QS panel settings</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_columns_title">QS rows and columns</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>

    <!-- QS themes -->
    <string name="qs_themes_category_title">QS Themes</string>
    <string name="qs_bg_use_new_tint">Tint QS tiles using accent color</string>
    <string name="qs_bg_use_new_tint_summary">Enable the accent color tint on the QS tiles</string>

    <!-- Brightness slider styles -->
    <string name="android_s_string" translatable="false">Android 12</string>
    <string name="aosp_string" translatable="false">AOSP</string>
    <string name="miui_string" translatable="false">MIUI</string>
    <string name="oos_string" translatable="false">OxygenOS</string>

    <!-- Radio info -->
    <string name="radio_info_title">Radio info</string>

    <!-- gvisual mod -->
    <string name="gvisual_title">Visual Tweaks</string>
    <string name="gvisual_summary">Various UI customizations</string>
    <string name="rounded_ui_title">Rounded corner</string>
    <string name="rounded_ui_dialog_title">Select rounded corner model</string>
    <string name="rounded_style_default">Default</string>
    <string name="rounded_style_rectangle">Rectangle</string>
    <string name="rounded_style_large">Large</string>
    <string name="rounded_style_medium">Medium</string>
    <string name="statusbar_height_title">Statusbar height</string>
    <string name="statusbar_height_dialog_title">Select statusbar height model</string>
    <string name="sb_height_default">Default</string>
    <string name="sb_height_medium">Medium</string>
    <string name="sb_height_large">Large</string>
    <string name="sb_height_extralarge">Extra Large</string>

    <!-- QS tile styles -->
    <string name="qs_tile_style_title">QS tile style</string>
    <string name="qstile_default">Default</string>
    <string name="qstile_circle_trim">Circle with trim</string>
    <string name="qstile_dual_tone_circle">Dual-toned circle</string>
    <string name="qstile_squircle_trim">Squircle with trim</string>
    <string name="qstile_wavey">Wavey</string>
    <string name="qstile_pokesign">Pokesign</string>
    <string name="qstile_ninja">Ninja</string>
    <string name="qstile_dottedcircle">Dotted Circle</string>
    <string name="qstile_attemptmountain">An attempt of a mountain</string>
    <string name="qstile_squaremedo">The Squaremedo</string>
    <string name="qstile_inkdrop">Ink</string>
    <string name="qstile_cookie">Cookie</string>
    <string name="qstile_circleoutline">Circle Outline</string>
    <string name="qstile_cosmos">Shishu Cosmos</string>
    <string name="qstile_divided">Divided Circle</string>
    <string name="qstile_neonlike">Neon Light</string>
    <string name="qstile_oos">Oxygen</string>
    <string name="qstile_triangles">Triangle</string>

    <!-- Heads up -->
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Pop up status bar notifications</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>

    <!-- Gaming mode -->
    <string name="gaming_title">Gaming mode</string>
    <string name="gaming_title_summary">Extra features for immersive gaming experience</string>
    <string name="gaming_mode_enabled_title">Enable gaming mode</string>
    <string name="gaming_mode_disable_auto_brightness_title">Disable automatic brightness</string>
    <string name="gaming_mode_disable_auto_brightness_summary">Disable auto brightness when entering game mode</string>
    <string name="gaming_mode_notification_danmaku_title">Notification Danmaku</string>
    <string name="gaming_mode_notification_danmaku_summary">Display the notification content in the form of danmaku in the game</string>
    <string name="gaming_mode_quick_start_apps_title">Quick Start Apps</string>
    <string name="gaming_mode_quick_start_apps_summary">Choose the application that you want to launch with a floating ball</string>

    <string name="gaming_mode_performance">Performance</string>
    <string name="gaming_mode_use_game_driver_title">Use game driver</string>
    <string name="gaming_mode_use_game_driver_summary">Use specific drivers for games</string>
    <string name="gaming_mode_change_performance_title">Performance tuning</string>
    <string name="gaming_mode_change_performance_summary">Adjust performance level when starting game</string>
    <string name="gaming_mode_performance_title">Performance level</string>

    <string name="gaming_mode_dnd">Do not distrub</string>
    <string name="gaming_mode_disable_notification_alert_title">Disable notification alert</string>
    <string name="gaming_mode_disable_notification_alert_summary">Do not allow floating notification and conversation bubbles other than incoming calls and alarms</string>
    <string name="gaming_mode_disable_ringtone_title">No ringing</string>
    <string name="gaming_mode_disable_ringtone_summary">Turn off the ringing of incoming calls and notifications in gaming mode</string>
    <string name="gaming_mode_auto_answer_call_title">Answering calls automatically</string>
    <string name="gaming_mode_auto_answer_call_summary">Answer calls automatically in the game and hands free when no headphones connected</string>

    <string name="gaming_mode_prevent_accidental_touch">Prevent accidental touch</string>
    <string name="gaming_mode_disable_gesture_title">Disable gestures</string>

    <string name="gaming_mode_apps">Game list</string>
    <string name="gaming_mode_dynamic_add_title">Dynamic mode</string>
    <string name="gaming_mode_dynamic_add_summary">Try detecting and adding gaming apps automatically</string>

    <string name="gaming_mode_show_danmaku_title">Show danmaku</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_title">Dynamic filtering notification</string>
    <string name="gaming_mode_danmaku_dynamic_notification_filter_summary">Automatically filter notifications such as download progress</string>
    <string name="gaming_mode_danmaku_size_horizontal_title">Danmaku size (horizontal)</string>
    <string name="gaming_mode_danmaku_size_vertical_title">Danmaku size (vertical)</string>
    <string name="gaming_mode_danmaku_speed_horizontal_title">Danmaku speed (horizontal)</string>
    <string name="gaming_mode_danmaku_speed_vertical_title">Danmaku speed (vertical)</string>
    <string name="gaming_mode_danmaku_blacklist">Blacklist</string>
    <string name="add_package_to_title">Add application</string>

</resources>
