<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 Nitrogen Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/quicksettings_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="qs_columns_rows_category"
        android:title="@string/qs_columns_rows_category_title">

        <com.lessaosp.settings.preferences.CustomSeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="5"
            android:min="1"
            android:defaultValue="3"
            settings:units="" />

        <com.lessaosp.settings.preferences.CustomSeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="5"
            android:min="1"
            android:defaultValue="1"
            settings:units="" />

        <com.lessaosp.settings.preferences.CustomSeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="7"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />

        <com.lessaosp.settings.preferences.CustomSeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />
        </PreferenceCategory>

        <com.lessaosp.settings.preferences.SystemSettingSwitchPreference
            android:key="qs_panel_bg_use_new_tint"
            android:title="@string/qs_bg_use_new_tint"
            android:summary="@string/qs_bg_use_new_tint_summary"
            android:defaultValue="true" />

    <!-- Gvisual mod -->
    <PreferenceCategory 
        android:key="gvisual_category"
        android:title="@string/gvisual_title">

        <PreferenceScreen
            android:key="gvisual"
            android:title="@string/gvisual_title"
            android:summary="@string/gvisual_summary"
            android:fragment="com.lessaosp.settings.fragments.GvisualSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_settings_category"
        android:title="@string/qs_themes_category_title">

        <ListPreference
            android:key="qs_tile_style"
            android:title="@string/qs_tile_style_title"
            android:persistent="false"
            android:entries="@array/qs_selector_entries"
            android:entryValues="@array/qs_selector_values" />

    </PreferenceCategory>


</PreferenceScreen>
